# HEYTEA

./: .gitignore  Blueberry.md  Blueberry_JP.cpp  Blueberry_PCBA.cpp  Blueberry_PCBA_ass.cpp  Blueberry_Posi.cpp  Blueberry_lead.cpp  CMakeLists.txt  FW_cis_final.cpp  FW_cis_torque.cpp  FW_final.cpp  FW_pre_carte.cpp  FW_pre_final.cpp  FW_pre_torque.cpp  FW_pre_torque2.cpp  FW_pre_torque3.cpp  FleshWasberry_slerp.cpp  FleshWaxBerry.md  FleshWaxberry_OneshotCarte.cpp  FleshWaxberry_OneshotCarte_pro.cpp  FleshWaxberry_OneshotJP.cpp  FleshWaxberry_OneshotP.cpp  FleshWaxberry_admit_pre.cpp  FleshWaxberry_imped_cis.cpp  FleshWaxberry_imped_pre.cpp  FleshWaxberry_imped_pre_p.cpp  FleshWaxberry_lead.cpp  FleshWaxberry_main.cpp  FleshWaxberry_pre_p.cpp  FleshWaxberry_pre_torque_p.cpp  FleshWaxberry_readOnce.cpp  FleshWaxberry_reprJP.cpp  FleshWaxberry_slerp.cpp  FleshWaxberry_zeroGravity.cpp  README.md
DRINKS/FleshWaxberry/: CMakeLists.txt  FW_final.cpp  FW_pre_carte.cpp  FW_pre_final.cpp  FW_pre_torque2.cpp  FW_pre_torque3.cpp  FW_testBench.cpp  FleshWaxberry_OneshotJP.cpp  FleshWaxberry_OneshotJP_pro.cpp  FleshWaxberry_reprJP_K.cpp  FleshWaxberry_slerp_carte.cpp  FleshWaxberry_zeroGravity.cpp  README.md
DRINKS/pbdlib-cpp-master/: CMakeLists.txt  README.md
DRINKS/pbdlib-cpp-master/data/: data_4_frames.txt  data_4_trajectories.txt  data_pose_gmm_XU.txt  data_pose_tpgmm_XU2.txt  data_quat_tpgmm_XU.txt  data_sphere_gmm_letter_S.txt  data_sphere_tpgmm_transformedXU.txt
DRINKS/pbdlib-cpp-master/include/: draw_utils.h  gfx.h  gfx2.h  gfx3.h  gfx_common.h  gfx_ui_config.h  imconfig.h  lqr.h  misc_utils.h  mpc_utils.h  mvn.h  tensor.h
DRINKS/pbdlib-cpp-master/src/: demo_GMR01.cpp  demo_GPR01.cpp  demo_HSMM_batchLQR01.cpp  demo_LWR_batch01.cpp  demo_LWR_iterative01.cpp  demo_MPC_batch01.cpp  demo_MPC_iterative01.cpp  demo_MPC_semitied01.cpp  demo_MPC_velocity01.cpp  demo_Riemannian_S2_GMM01.cpp  demo_Riemannian_S2_TPGMM01.cpp  demo_Riemannian_S2_infHorLQR01.cpp  demo_Riemannian_S2_product01.cpp  demo_Riemannian_S3_TPGMM01.cpp  demo_Riemannian_S3_infHorLQR01.cpp  demo_Riemannian_SPD_GMR01.cpp  demo_Riemannian_SPD_GMR_Mandel01.cpp  demo_Riemannian_SPD_interp02.cpp  demo_Riemannian_pose_GMM01.cpp  demo_Riemannian_pose_TPGMM01.cpp  demo_Riemannian_pose_batchLQR01.cpp  demo_Riemannian_pose_infHorLQR01.cpp  demo_TPGMMProduct01.cpp  demo_TPGMR01.cpp  demo_TPMPC01.cpp  demo_ergodicControl_2D01.cpp  demo_ergodicControl_nD01.cpp  demo_online_GMM01.cpp  demo_online_HSMM01.cpp  demo_proMP01.cpp
DRINKS/pbdlib-cpp-master/src/utils/: gfx.cpp  gfx2.cpp  gfx3.cpp  gfx_common.cpp  gfx_ui.cpp  mpc_utils.cpp
IMAGES/: FleshWaxberry0-config.json
LACTIC/: CMakeLists.txt  LACTIC.h
MILK/: CMakeLists.txt  MILK.h  Matrix3d2array16.cpp
